--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
         "symfony/console": "^3.4",
         "php-ffmpeg/php-ffmpeg": "^0.16.0",
         "php-di/php-di": "^6.0",
-        "ocramius/proxy-manager": "^2.0"
+        "ocramius/proxy-manager": "^2.0",
+        "symfony/filesystem": "^3.4",
+        "symfony/mime": "^5.1"
     }
 }
