--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "hamidgh83/preview-maker",
-    "description": "",
+    "description": "PreviewMaker is a standalone application written in pure PHP to create image preview from different file formats ranging from Microsoft documents to video formats.",
     "type": "project",
     "license": "MIT",
     "authors": [
